src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__percent_jobs_are_still_job_expansions__fg.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"fg %\")?"
---
fg %

0  2  `fg`  CALLABLE `fg`
2  3  ` `   meta.function-call.arguments
3  4  `%`   punctuation.definition.variable.job
